# guile-hall

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README.org  configure.ac  guix.scm  hal.scm  hall.scm
.reuse/: dep5
.reuse/templates/: hall.commented.jinja2
doc/: hall.texi
hal/: builders.scm  clean.scm  common.scm  dist.scm  guix.scm  init.scm  scan.scm  spec.scm
hall/: build.scm  builders.scm  clean.scm  common.scm  config.scm  dist.scm  friends.scm  guix.scm  hconfig.scm  hconfig.scm.hall  init.scm  logging.scm  publish.scm  scan.scm  spec.scm  workarounds.scm
po/: ChangeLog  Makevars  POTFILES.in  guile-hall.pot
scripts/: hal.in  hall.in
tests/: build.scm  builders.scm  common.scm  guix-file.scm  hall.scm  scan.scm  spec.scm
